--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@letruxux/web-search",
-  "version": "1.0.6",
+  "version": "1.0.0",
   "description": "Wrapper for web search engines libraries.",
   "type": "module",
   "main": "dist/index.js",
@@ -9,7 +9,7 @@
     "dist"
   ],
   "scripts": {
-    "pub": "tsc && npm publish --access public"
+    "pub": "tsc && bun publish --access public"
   },
   "keywords": [
     "google",
